fix: fixed font size being too large on 100% zoom

--- a/src/components/app/About_Me/About_Me.module.css
+++ b/src/components/app/About_Me/About_Me.module.css
@@ -128,6 +128,7 @@
     .history {
         width: 90%;
         font-size: 1.5em;
+        border: 0;
     }
 
     .skillsContainer {
