--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,6 @@
 /* general decoration*/
 :root {
-    --title_size: 5em;
+    --title_size: 4em;
     --green: rgba(23, 171, 74, 0.5);
 } 
 
@@ -36,17 +36,17 @@ h2 {
 }
 
 h3 {
-    font-size: 5em;
+    font-size: 3em;
     margin: 0;
 }
 
 p {
-    font-size: 1.1em;
+    font-size: 0.85em;
     margin: 0;
 }
 
 a {
-    font-size: 1.1em;
+    font-size: 0.9em;
     color: inherit;
     text-decoration-line: none;
 }
@@ -87,5 +87,20 @@ li {
 
     :root {
         --title_size: 3em
+    }
+
+    p {
+        font-size: 1.1em;
+    }
+}
+
+/* Medium devices (tablets, less than 1025) */
+@media only screen and (min-width: 700px) and (max-width: 1024px) and (min-height: 700px){
+    p {
+        font-size: 1.2em;
+    }
+
+    a {
+        font-size: 1.1em;
     }
 }
